--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,47 +1,33 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register</title>
 </head>
 <body>
+<h1>Registration Form</h1>
 
-<h2>Register</h2>
+<form action="/UtilAct/register" method="POST">
+  <label for="nom">Nom:</label>
+  <input type="text" id="nom" name="nom" th:value="${utilisateur.nom}"><br><br>
 
-<form th:action="@{/register}" th:object="${utilisateur}" method="post">
-  <div>
-    <label for="nom">Nom:</label>
-    <input type="text" id="nom" th:field="*{nom}" placeholder="Enter your last name" required/>
-  </div>
+  <label for="role">Role:</label>
+  <input type="text" id="role" name="role" th:value="${utilisateur.role}"><br><br>
 
-  <div>
-    <label for="prenom">Prenom:</label>
-    <input type="text" id="prenom" th:field="*{prenom}" placeholder="Enter your first name" required/>
-  </div>
+  <label for="prenom">Prenom:</label>
+  <input type="text" id="prenom" name="prenom" th:value="${utilisateur.prenom}"><br><br>
 
-  <div>
-    <label for="role">Role:</label>
-    <input type="text" id="role" th:field="*{role}" placeholder="Enter your role" required/>
-  </div>
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="email" th:value="${utilisateur.email}"><br><br>
 
-  <div>
-    <label for="mdp">Password:</label>
-    <input type="password" id="mdp" th:field="*{mdp}" placeholder="Enter your password" required/>
-  </div>
+  <label for="mdp">Password:</label>
+  <input type="password" id="mdp" name="mdp" th:value="${utilisateur.mdp}"><br><br>
 
-  <div>
-    <label for="email">Email:</label>
-    <input type="email" id="email" th:field="*{email}" placeholder="Enter your email" required/>
-  </div>
+  <label for="tel">Phone:</label>
+  <input type="text" id="tel" name="tel" th:value="${utilisateur.tel}"><br><br>
 
-  <div>
-    <label for="tel">Phone:</label>
-    <input type="tel" id="tel" th:field="*{tel}" placeholder="Enter your phone number" required/>
-  </div>
-
-  <div>
-    <button type="submit">Register</button>
-  </div>
+  <button type="submit">Register</button>
 </form>
 
 </body>
